video mmodal broken styles fix

--- a/css/modal.css
+++ b/css/modal.css
@@ -66,7 +66,7 @@
     width: calc(100% - 50px);
     max-width: 100vh;
     max-height: 80vh;
-    padding: 70px 10px 30px 10px;
+    padding: 50px 10px 30px 10px;
     border-color: #fff;
     flex-direction: column;
 }
@@ -98,8 +98,8 @@
     padding-bottom: 15px;
 }
 .is-centralised:not(.is-intro) .modal .video-title {
-    margin-top: -3.5em;
-    height: 2.5em;
+    margin-top: -1.5em;
+    margin-bottom: 2em;
     font-size: 1.25em;
     padding: 0 50px 0 10px;
     color: #ffffff;
@@ -488,24 +488,6 @@ a:focus {
 .denver .marker .visible {
     fill: #e65a59;
 }
-
-
-
-
-.marker text {
-    display: none;
-}
-.test {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    color: #000;
-}
-.test * {
-    pointer-events: auto !important;
-}
-
-
 
 
 
